--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,58 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f5f7b2"
-    tools:context=".Screens.Categories">
-
+    tools:context=".Screens.ForgotPassword">
 
     <TextView
-        android:id="@+id/player_name_text"
+        android:id="@+id/Logo_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:fontFamily="@font/acme"
-        android:text="Categories"
-        android:textSize="36dp"
-        android:textColor="#000000"
+        android:text="50/50"
+        android:textSize="60sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/category1_button"
-        android:layout_width="201dp"
-        android:layout_height="79dp"
-        android:layout_marginBottom="10dp"
-        android:text="Category 1"
-        app:layout_constraintBottom_toTopOf="@+id/category2_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/category2_button"
-        android:layout_width="201dp"
-        android:layout_height="79dp"
-        android:text="Category 2"
+    <EditText
+        android:id="@+id/email_input"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Enter e-mail"
+        android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/category3_button"
-        android:layout_width="201dp"
-        android:layout_height="79dp"
-        android:layout_marginTop="10dp"
-        android:text="Category 3"
+        android:id="@+id/send_email_button"
+        android:layout_width="157dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="40dp"
+        android:text="Send "
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/category2_button" />
+        app:layout_constraintTop_toBottomOf="@+id/email_input" />
 
     <Button
-        android:id="@+id/back_button"
+        android:id="@+id/cancel_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="50dp"
         android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
