--- a/app/src/main/res/layout/activity_player_profile.xml
+++ b/app/src/main/res/layout/activity_player_profile.xml
@@ -27,7 +27,7 @@
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/checkbox_on_background" />
+        app:srcCompat="@drawable/ic_edit" />
 
     <Button
         android:id="@+id/logOut_button"
@@ -39,15 +39,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/back_profile_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:text="Back"
-        app:layout_constraintBottom_toTopOf="@+id/logOut_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/all_player_games"
@@ -74,10 +66,10 @@
         android:id="@+id/switchList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp"
-        android:text="Recent"
+        android:text="Sort"
         app:layout_constraintBottom_toTopOf="@+id/all_player_games"
-        app:layout_constraintEnd_toStartOf="@+id/recent_game_text"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
